# mini_project

./: README.md  docker-compose.yml  pyproject.toml  st.sh
app/: dependencies.py  main.py
app/core/: settings.py
app/crud/: post.py
app/models/: comment.py  post.py  user.py
app/routers/: auth.py  post.py  user.py
app/schemas/: post.py  user.py
app/utils/: security.py
my-diary/: my diary_v3.key
my-diary/migrations/models/: 3_20251210202941_None.py
my_blog_api/: .env  .gitignore  README.md  main.py
my_blog_api/app/: dependencies.py  main.py
my_blog_api/app/crud/: comment.py  post.py  user.py
my_blog_api/app/db/: session.py
my_blog_api/app/models/: comment.py  post.py  user.py
my_blog_api/app/routers/: auth.py  post.py  user.py
my_blog_api/app/schemas/: comment.py  post.py  token.py
my_blog_api/app/utils/: security.py
newyear_project/: .gitignore  pyproject.toml
newyear_project/blessings/: admin.py  models.py  services.py  urls.py  views.py
newyear_project/blessings/migrations/: 0002_remove_userblessing_to_email.py
newyear_project/blessings/templates/blessings/: base.html  email_received.html  home.html  owner_inbox.html  write.html
newyear_project/config/: settings.py  urls.py
schedule-manager/: init.sql  readme.md  schedule_manager.py  setup.py
schedule-manager/myschedule.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
